cmake_minimum_required(VERSION 3.16)
project(ardUI)

set(CMAKE_CXX_STANDARD 11)


# Setting directory names
set(ARDUI_DIRNAME ardUI)
set(SOURCE_DIRNAME src)
set(INCLUDE_DIRNAME inc)
set(ARDUINO_DIRNAME Arduino)
set(TEST_DIRNAME test)
set(EXAMPLE_DIRNAME examples)
set(BUILDER_DIRNAME Builder)


# Setting directory paths
set(ARDUI_DIRECTORY ${PROJECT_SOURCE_DIR}/${ARDUI_DIRNAME})

set(TL_DIRECTORY ${ARDUI_DIRECTORY}/core/tl)
set(CONFIG_DIRECTORY ${ARDUI_DIRECTORY}/config)
set(CORE_INC_DIRECTORY ${ARDUI_DIRECTORY}/core/inc)
set(CORE_SRC_DIRECTORY ${ARDUI_DIRECTORY}/core/src)
set(WIDGETS_INC_DIRECTORY ${ARDUI_DIRECTORY}/widgets/inc)
set(WIDGETS_SRC_DIRECTORY ${ARDUI_DIRECTORY}/widgets/src)


set(ARDUINO_DIRECTORY ${PROJECT_SOURCE_DIR}/${ARDUINO_DIRNAME})
set(TEST_DIRECTORY ${PROJECT_SOURCE_DIR}/${TEST_DIRNAME})
set(EXAMPLES_DIRECTORY ${PROJECT_SOURCE_DIR}/${EXAMPLE_DIRNAME})
set(BUILDER_DIRECTORY ${PROJECT_SOURCE_DIR}/${BUILDER_DIRNAME})


# Adding ardUI and Arduino emulator build lists
add_subdirectory(${ARDUINO_DIRECTORY})
add_subdirectory(${ARDUI_DIRECTORY})
add_subdirectory(${BUILDER_DIRECTORY})
add_subdirectory(${EXAMPLES_DIRECTORY})
add_subdirectory(${TEST_DIRECTORY})
